# maoxiangqian.github.io

./: .gitignore  README.md  _config.yml  element.sh  index.html  index.md  insert_data.sh  number_guess.sh  number_guess.sql  periodic_table.sql  queries  salon.sh  salon.sql  style.css  universe.sql  worldcup.sql
JavaScript-course/: array-test.js  buble-sort.js  build-record-collection.js  object-test.js
_posts/: 2025-07-06-welcome-to-jekyll.markdown
datastrure-algorithm/: find_sum.py  gym.js  subset_sum.py
html-course/: test.html
jobs/: note.txt  wpp_job.require.txt
my-react-app/: package-lock.json
note/: note.html
resume/: index-chinese.html  index.html  left-side.html  maoxiangqian.md  paginate.js  right-side.html  style.css
resume/cpp-repo/: CMakeCache.txt  CMakeLists.txt  Makefile  app  cmake_install.cmake  conanfile.txt  main.cpp
resume/cpp-repo/msgq/: main.cpp
resume/exaction-large-scale-data/: a.out  class_inherient.cpp  class_inherient.txt  elipsis.cpp  main.txt  thread.cpp
system-architecture/: system-architecture.md
